feat(lang): add czech language support

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,14 @@ on:
         description: "Text of the post"
         type: string
         required: true
+      logLevel:
+        description: "Language of your LinkedIn"
+        required: true
+        default: "en"
+        type: choice
+        options:
+          - en
+          - cz
 jobs:
   test:
     timeout-minutes: 60
