--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,7 +22,7 @@ on:
         description: "Text of the post"
         type: string
         required: true
-      logLevel:
+      lang:
         description: "Language of your LinkedIn"
         required: true
         default: "en"
@@ -51,6 +51,7 @@ jobs:
           url: ${{ inputs.url }}
           altOfFile: ${{ inputs.altOfFile }}
           postText: ${{ inputs.postText }}
+          lang: ${{ inputs.lang }}
       - uses: actions/upload-artifact@v3
         if: always()
         with:
